# datasipper

./: .dockerignore  .gclient_entries  .gclient_previous_sync_commits  .gcs_entries  .gitignore  BUILD_INCOMPLETE.md  BUILD_OPTIMIZATION_GUIDE.md  BUILD_READINESS_ASSESSMENT.md  BUILD_SYSTEM_TEST_RESULTS.md  BUILD_TEST_RESULTS.md  CHROMIUM_VERSION.txt  COMPREHENSIVE_PROJECT_STATUS.md  DATASIPPER_COMPREHENSIVE_ANALYSIS.md  DOCKER_BUILD_SYSTEM_ANALYSIS.md  Dockerfile.dev  GITHUB_ISSUES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_REPORT.md  IMPLEMENTATION_PROGRESS_REPORT.md  IMPLEMENTATION_SUCCESS_SUMMARY.md  NEXT_STEPS_PATCH_INTEGRATION.md  PATCH_INTEGRATION_IMPLEMENTATION_PLAN.md  README.md  build.sh  chromium-src  docker-entrypoint.sh  todo.md
.build_state/: stage_01_environment_setup.timestamp  stage_02_dependencies.timestamp  stage_03_chromium_fetch.timestamp  stage_06_initial_build.timestamp
.checkpoints/auto_20250702_063830/: chrome_binary  disk_usage  memory_usage  ninja_progress  patches_available  timestamp
.checkpoints/auto_20250702_063853/: build_size  disk_usage  git_status  memory_usage  timestamp
.checkpoints/build_restart_success/: build_size  disk_usage  environment  memory_usage  timestamp
.checkpoints/resume_attempt_1821/: build_size  disk_usage  memory_usage  ninja_progress  patches_available  timestamp
.cipd/: tagcache.db
.cipd/pkgs/0/: _current
.cipd/pkgs/1/: _current
.cipd/pkgs/10/: _current  description.json
.cipd/pkgs/12/: _current
.cipd/pkgs/13/: description.json
.cipd/pkgs/14/: _current  description.json
.cipd/pkgs/15/: _current
.cipd/pkgs/16/: _current  description.json
.cipd/pkgs/17/: _current  description.json
.cipd/pkgs/19/: _current
.cipd/pkgs/20/: _current
.cipd/pkgs/21/: _current
.cipd/pkgs/23/: _current
.cipd/pkgs/6/: description.json
.cipd/pkgs/7/: _current
.cipd/pkgs/8/: description.json
.cipd/pkgs/9/: _current  description.json
.patch_state/: backup_branch  failed_patches  summary
build_scripts/: manage_patches.sh
docker/: BUILD_STRATEGY.md  Dockerfile.chromium-builder  build-chromium-optimized.sh  build-chromium.sh  docker-build-optimized.sh  docker-build.sh
docs/: CHROMIUM_BUILD_STRATEGY.md  DEVELOPMENT.md  GETTING_STARTED.md  PATCH_DEVELOPMENT.md  PATCH_MANAGEMENT.md
patches/: series-corrected  series.backup  series.corrected
patches/core/network-interception/: data-storage-integration.patch  (+5 more)
patches/upstream-fixes/: build-system-fixes-corrected.patch  build-system-fixes.patch  network-stack-compatibility.patch
scripts/: apply-patches.sh  auto-commit-build.sh  build-chrome-direct.sh  build-chrome-optimized.sh  checkpoint-build.sh  ci-build.sh  configure-build.sh  dev-setup-safe.sh  dev-setup-universal.sh  dev-setup.sh  fetch-chromium.sh  incremental-build.sh  install-deps-arch.sh  install-deps-debian.sh  monitor-build.sh  ninja-output-capture.sh  optimize-build-env.sh  patches.py  pull-changes.sh  quick-build.sh  set_quilt_vars.sh  setup-env.sh  staged-build-system.sh
standalone_build/: CMakeLists.txt
test_build/: datasipper_compile_test.cc  datasipper_test
(+25 files in other folders)
